--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -32,15 +32,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
      
+     
       - name: Detect package manager
         id: detect-package-manager
         run: |
-          if [ -f "${{ github.workspace }}/myportfolio/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/myportfolio/package.json" ]; then
+          if [ -f "${{ github.workspace }}/myportfolio/package-lock.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
@@ -49,6 +45,7 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+
 
       - name: Setup Node
         uses: actions/setup-node@v4
