--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,6 +1,66 @@
+# name: Deploy Next.js site to Pages
+
+# on: 
+#   push:
+#     branches: ["main"]
+#   workflow_dispatch:
+
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
+
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: false
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+
+#       - name: Setup Node
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: "20"
+#           cache: 'npm'
+#           cache-dependency-path: '**/package-lock.json'
+
+#       - name: Setup Pages
+#         uses: actions/configure-pages@v5
+#         with:
+#           static_site_generator: next
+
+#       - name: Install dependencies
+#         run: |
+#           cd myportfolio
+#           npm ci
+
+#       - name: Build with Next.js
+#         run: |
+#           cd myportfolio
+#           npm run build
+
+#       - name: Upload artifact
+#         uses: actions/upload-pages-artifact@v3
+#         with:
+#           path: myportfolio/out
+
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Deploy to GitHub Pages
+#         id: deployment
+#         uses: actions/deploy-pages@v4
 name: Deploy Next.js site to Pages
 
-on: 
+on:
   push:
     branches: ["main"]
   workflow_dispatch:
@@ -28,11 +88,6 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          static_site_generator: next
-
       - name: Install dependencies
         run: |
           cd myportfolio
@@ -42,6 +97,9 @@ jobs:
         run: |
           cd myportfolio
           npm run build
+          # Create assets directory in out folder and copy assets
+          mkdir -p out/assets
+          cp -r assets/* out/assets/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
