--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -18,9 +18,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout the code
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Step 2: Set up Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -28,11 +30,13 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           cd myportfolio
           npm ci
 
+      # Step 4: Build the Next.js project and handle the public folder under assets
       - name: Build with Next.js
         env:
           NODE_ENV: 'production'
@@ -40,13 +44,12 @@ jobs:
         run: |
           cd myportfolio
           npm run build
-          # Create assets directory in out folder and copy assets
-          mkdir -p out/assets
+          # Ensure the public folder from assets is included in the build output
           mkdir -p out/assets/public
-          cp -r assets/public out/assets/public
-          cp -r assets/* out/assets/
-       
+          cp -r assets/public/* out/assets/public
+          cp -r assets/* out/assets
 
+      # Step 5: Upload the built artifact for deployment
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -59,6 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      # Step 6: Deploy the built site to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
